2013-01-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.h [XeTeX]: We must #include <zlib.h> and
	<teckit/TECkit_Common.h> before "XeTeX_ext.h" to avoid typedef
	duplications.

2013-01-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, am/bootstrap.am, am/cweb.am: Do not distribute
	output from parallel-tests.
	* configure.ac: Temporarily disable parallel-tests.

2012-12-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* silent-sh: New shell script for some silent rules.
	* configure.ac: Create silent-sh.
	* Makefile.am (makecpool, tangle, tangleboot, ctangle, tie),
	am/bootstrap.am, am/cweb.am, ctangleboot-sh.in, tangle-sh.in,
	web2c-sh.in: Enable silent rules.

2012-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* w2c/config.h [MinGW32]: Define LONGINTEGER_{TYPE ,PRI} as for
	native Windows, i.e., as __int64 and "I64".

2012-11-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, configure.ac: Add pixman, cairo, and harfbuzz
	for future MetaPost and XeTeX.

2012-11-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: No need to check for Annot::decRefCnt with
	poppler 0.18 or better.
	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-11-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/bootstrap.am: Add dependency of (c)tangleboot_OBJECTS on
	(c)tangleboot_DEPENDENCIES.

2012-11-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Also drop the unused otangle.

2012-11-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop o_tangle, no longer used.

2012-11-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tex.ch: Move native buffer printing code from here ...
	* enctex.ch: ... to here.

2012-11-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tex.ch: Avoid conflict with xetexdir/xetex.web.
	Introduce Web macros check_quoted and print_quoted.
	(cs_error): Move "endmubyte" code from here ...
	* enctex.ch (cs_error): ... to here.

2012-10-19  Peter Breitenlohner  <peb@mppmu.mpg.de>
